* GetCreatureTurningSpeed and GetCreatureFootWeight are made available as condition functions.
* Added alias to GetNumBrokenEquippedItems -> GetNumBrokenEq 

===Bug Fixes:
* Nada

===New Functions:
* Get/SetExplosionRefSource
* Get/SetExplosionRefRadius
* CreateFolder (made by anhatthezoo!)
* GetActorValueDamage (alias: GetAVDamage)
* GetEquippedItemRefs
* SetShowOffOnCornerMessageEventHandler

===WIP (registered but unfinished)
* ShowSkillMenu
* GetLevelUpMenuUnspentPoints
* SetLevelUpMenuCanExitEarly
* SetLevelUpMenuPoints
* GetPipboyRadioVoiceEntryData  ; quite buggy atm
* Set/GetNoEquipShowOff (alias: Set/GetNoEquipSO)



//===v1.30

===Bug Fixes:
*Fix conflict with Stewie's Tweaks that broke bNoCrippleCriticalMessages=1 + g_bPatchCripple=1. 

===New Functions:
*Get/SetIngestibleConsumeSound
*SetFactionCombatReactionTemp
- The above is still registered, but was split in two for readability:
	*SetAllyTemp (alias: SetAllyShowOff)
	*SetEnemyTemp (alias: SetEnemyShowOff)
*GetEquippedItemRefForItem
*TopicInfoGet/SetResponseStrings
*(WIP functions from last update are still not done, sorry!)

===Credits:
-Trooper for documenting and suggesting SetAlly/EnemyTemp
*lStewieAl for helping fix the conflict.


//===v1.31
===New Function:
*TopicInfoSetNthResponseString


//===v1.35
===Bug Fixes:
*Prevent OnCornerMessage event from firing for messages that have empty description strings.

===New Functions:
*GetItemCanHaveHealth
*SayTo_GetTopic
*SayTo_GetTopicInfo
*RemoveFormFromFormList
*GetZoneRespawns
*ClearCinematicTextQueue
*GetCellEncounterZone
*ShowPauseMenu
*RemoveFormFromLeveledList


//===v1.40
===Bug Fixes:
*Nada

===New Functions:
*SetWeaponFlag (alias: SetWeaponHasFlag)
*SetOwnershipTemp
*IsActorAlt
*ApplyEasing (alias: Ease)


====== (Template:)

//===v???
===Bug Fixes:
* 

===New Functions:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********